# RAG

./: injection_pipeline.py  pyproject.toml
data/text_files/: ml.txt  python_doc.txt
notebook/: document.ipynb
