[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
]
